--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,16 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+input,
+input::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 :root {
   --black: #000;
   --menu-active: #282828;
